# openvdb-bazel-rules

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
examples/: BUILD.bazel  helloworld.cpp
include/openvdb/: version.h
